infraestructura/ingress-alb.yaml
# infraestructura/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovatech-ingress
  namespace: innovatech
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/despachos
            pathType: Prefix
            backend:
              service:
                name: despachos-service
                port:
                  number: 80
          - path: /api/ventas
            pathType: Prefix
            backend:
              service:
                name: ventas-service
                port:
                  number: 80
